# slop-algo-visualizer

./: ARCHITECTURE.md  README.md  pyproject.toml
.agents/rules/: running-python.md
src/: main.py  state.py
src/algorithms/: base.py  bubble_sort.py  factory.py  insertion_sort.py  merge_sort.py  n_queens.py  quick_sort.py  selection_sort.py
src/audio/: sound_manager.py
src/datasets/: generators.py
src/metrics/: system_monitor.py
src/ui/: all_datasets_visualizer.py  analysis_screen.py  app.py  components.py  menu.py  visualizer.py
tests/: test_algorithms.py
