[project]
name = "antigravity-playground"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "rich>=14.3.3",
    "textual>=8.0.1",
]

[dependency-groups]
dev = [
    "textual-dev>=1.8.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
