[project]
name = "antigravity-playground"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "miniaudio>=1.61",
    "numpy>=2.4.2",
    "pygame>=2.6.1",
    "rich>=14.3.3",
    "simpleaudio>=1.0.4",
    "textual>=8.0.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "textual-dev>=1.8.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
